# csharp-grpc-server

./: .gitignore  GrpcServer.sln  README.md
Server/: Db.cs  NewTask.cs  Program.cs  Server.csproj  SocketClient.cs  WebSocket.cs  Worker.cs
Server/Properties/: launchSettings.json
Server/Services/: GreeterService.cs
ServerTest/: ServerTest.csproj  UnitTest1.cs
Snap7/: Sharp7.cs
client/: README.md  pyproject.toml
client/client/: __main__.py  greet_pb2.py  greet_pb2_grpc.py  server.py
client/client/protos/: greet.proto
